http: early close of HTTP/1.x stream leaves garbage

An HTTP stream might be closed by the client before the response body has been fully read, either because the client aborted, or because the response is useless (e.g. error response).

In HTTP/2 case, this leads to an explicit stream-reset. But in HTTP/1.x, resetting an individual stream is impossible. The code fails to account for this as hinted in !588 (closed) and blindly marks the underlying connection as inactive (meaning available for reuse).